<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/google2_0_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/google_logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_google_account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/google_logo"
        app:layout_constraintStart_toStartOf="@+id/google_logo"
        android:id="@+id/title_txtview"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:id="@+id/first_name"
        app:layout_constraintStart_toStartOf="@+id/title_txtview"
        app:layout_constraintTop_toBottomOf="@+id/title_txtview"
        android:layout_marginTop="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/first_name_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:id="@+id/last_name"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/title_txtview"
        android:layout_marginTop="25dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/last_name_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/username_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_more_info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/you_can_user_letters_numbers_amp_periods"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_my_current_email_address_instead"
        android:id="@+id/use_curent_email_btn"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username_more_info_textview"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="12sp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="@+id/use_curent_email_btn"
        app:layout_constraintTop_toBottomOf="@+id/use_curent_email_btn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/use_curent_email_btn"
        android:hint="@string/confirm"
        android:id="@+id/password_confirm"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_confirm_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password_more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/use_8_or_more_charecters_with_a_mix_of_letters_numbers_amp_symbols"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password_more_info"
        android:textSize="12sp"
        android:id="@+id/show_pass_check"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_instead"
        app:layout_constraintStart_toStartOf="@+id/show_pass_check"
        app:layout_constraintTop_toBottomOf="@+id/show_pass_check"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="12sp"
        android:layout_marginTop="50dp"
        android:id="@+id/signin_instead_btn"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/signin_instead_btn"
        app:layout_constraintEnd_toEndOf="@+id/password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm"
        />


</androidx.constraintlayout.widget.ConstraintLayout>